<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="139dp"
        android:layout_height="145dp"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/img_photo"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/movie_name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/overview" />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/featured_crew" />

        <TextView
            android:id="@+id/txt_crew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crew" />
    </LinearLayout>

</RelativeLayout>